tests/positive/input_test_ifs.py
# passing all
a = -5
b = 2**9
c = +3
if a == 1:
    if b == "pedro":
        if c == (6, 7):
            b = 5 * 8
        elif b == 4:
            a = 2 / 4
    elif c == 8:
        a += a + (2 // (6 + 7))
else:
    b *= a + c
amigos = []
if amigos:
    +amigos

if (3, 4) == ():
    b = 4
    if b:
        3 + 4

3

