tests/negative/input_test_ifs.py
a = 3  # Initial value for demonstration

if a == 1:
	a = 0
elif a == 2:
	a = 1
elif a == 4:
	a = 2
elif a == 8:
	a = 4
else:
	a = "perrito"

while a == "perrito":
	a = "gatito"
	if a == 6:
		a = 3
	elif a == 2:
		a = 1
	elif a == 4:
		a = 2
	elif a == 8:
		a = 4
	else:
		a = "perrito"

if a == 1
	a = "a is 1"